# plasma-nm

./: CMakeLists.txt
editor/: connectioneditor.cpp
kded/: secretagent.cpp  service.cpp
libs/: CMakeLists.txt  handler.cpp
libs/declarative/: networkstatus.cpp
libs/editor/: CMakeLists.txt
libs/editor/settings/: connectionwidget.cpp
